force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/geopointe__GP_Assignment_Plan__c.object-meta.xml
<CustomObject>
    <description>Configuration data for Geopointe geographic assignment.</description>
    <label>Geopointe Assignment Plan</label>
    <nameField>
        <label>Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Assignment Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>