force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Batch_Size_HP_Records__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Batch_Size_HP_Records__c</fullName>
    <label>HP Batch Size - Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>