force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Custom_Assignment_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Custom_Assignment_Field__c</fullName>
    <inlineHelpText>This is the Geopointe Assignment Area field on your Standard or Custom object that will be populated with the matching Geopointe Assignment Area record.</inlineHelpText>
    <label>Custom Assignment Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>