force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Custom_Assignment_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Custom_Assignment_Object__c</fullName>
    <inlineHelpText>This is an the Custom Object you create that links Geopointe Assignment Areas to the standard or custom object in your system. This object you create should have Master-Detail to Geopointe Assignment Area and your custom/standard object.</inlineHelpText>
    <label>Custom Assignment Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>