force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Geocode_Quality_Exclusion_Level__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode_Quality_Exclusion_Level__c</fullName>
    <label>Geocode Quality Exclusion Level</label>
    <length>60</length>
    <type>Text</type>
</CustomField>