force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__High_Performance__c.field-meta.xml
<CustomField>
    <fullName>geopointe__High_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Utilize the off-platform high performance assignment engine.</inlineHelpText>
    <label>High Performance</label>
    <type>Checkbox</type>
</CustomField>