force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Last_Batch_Run_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Batch_Run_Complete_Date__c</fullName>
    <inlineHelpText>Date and time the last Assignment batch job completed. This field should not be modified by users.</inlineHelpText>
    <label>Last Batch Run Completed Date</label>
    <type>DateTime</type>
</CustomField>