force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Last_Inactive_Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Inactive_Batch_Run_Date__c</fullName>
    <inlineHelpText>Date and time the last Assignment Plan Inactive batch job ran. This field should not be modified by users.</inlineHelpText>
    <label>Last Inactive Batch Run Date</label>
    <type>DateTime</type>
</CustomField>