force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Last_Unassigned_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Unassigned_Run_Date__c</fullName>
    <inlineHelpText>Date and time the last job ran that processed all unassigned records. This field should not be modified by users.</inlineHelpText>
    <label>Last Unassigned Run Date</label>
    <type>DateTime</type>
</CustomField>