force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object__c</fullName>
    <inlineHelpText>API Name of the Map Object this Assignment Plan will run against.</inlineHelpText>
    <label>Map Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>