force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Number_of_Areas__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Number_of_Areas__c</fullName>
    <label>Number of Areas</label>
    <summaryForeignKey>geopointe__GP_Assignment_Area__c.geopointe__Assignment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>