force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Reassign_Owner__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Reassign_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, when a record is assigned to an Area, its owner will be changed to the user defined in the Area&apos;s User field. This only affects plans using assignment fields.</inlineHelpText>
    <label>Reassign Owner</label>
    <type>Checkbox</type>
</CustomField>