force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Run_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Run_Assignment_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Assignment Plan batch job will also run the default Lead or Case Assignment Rule upon record update. This only affects plans using assignment fields. If Reassign Owner is also checked, the Assignment Rule will take precedence.</inlineHelpText>
    <label>Run Assignment Rule</label>
    <type>Checkbox</type>
</CustomField>