force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>geopointe__SOQL_Filter__c</fullName>
    <inlineHelpText>A SOQL WHERE clause (without including &quot;WHERE&quot;) can be present here to add a hardcoded filter to the Assignment Plan.</inlineHelpText>
    <label>SOQL Filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>