force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__SOQL_Filter_Grandfather_Records__c.field-meta.xml
<CustomField>
    <fullName>geopointe__SOQL_Filter_Grandfather_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, a record that is ALREADY ASSIGNED will not be unassigned later even if it no longer meets the SOQL Filter criteria.</inlineHelpText>
    <label>Grandfather Records</label>
    <type>Checkbox</type>
</CustomField>