force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/fields/geopointe__Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>