force-app/main/default/objects/geopointe__GP_Assignment_Plan__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>